# saasemu

./: README.md  build.gradle  build.gradle.kts  gradlew  settings.gradle  settings.gradle.kts
.github/workflows/: android-ci.yml  android.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/control_layouts/: default.json
app/src/main/cpp/: CMakeLists.txt  libreto_glue.cpp  libretro_loader.cpp  native_bridge.cpp
app/src/main/java/com/saasemu/app/: App.kt
app/src/main/java/com/saasemu/app/core/: CoreStorage.kt  NativeBridge.kt
app/src/main/java/com/saasemu/app/ui/: CatalogActivity.kt  EmulationActivity.kt  ImportBiosActivity.kt  ImportCoreActivity.kt  MainActivity.kt  SettingsActivity.kt
app/src/main/java/com/saasemu/app/ui/controls/: ButtonView.kt  DpadView.kt  TouchControlsView.kt
app/src/main/res/layout/: activity_catalog.xml  activity_emulation.xml  activity_import_bios.xml  activity_import_core.xml  activity_main.xml  activity_settings.xml
app/src/main/values/: colors.xml  strings.xml  styles.xml
scripts/: build_cores.sh
